[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project]
name = "approck-healthcheck"
dynamic = ["version"]
description = "Liveness and readiness HTTP probes with StatsD worker gauges for Gevent and Gunicorn."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Alexey Dalekin" }]
keywords = ["healthcheck", "approck", "kubernetes", "liveness", "readiness", "statsd", "gevent", "gunicorn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "gevent>=25.9.0",
    "gevent-toolbelt>=1.0.12",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "requests>=2.32.0",
    "wsgiven>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/adalekin/healthcheck"
Repository = "https://github.com/adalekin/healthcheck"
Issues = "https://github.com/adalekin/healthcheck/issues"

[project.scripts]
healthcheck = "healthcheck.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "requests-mock>=1.12.0",
    "ruff>=0.8.0",
    "wsgiref-fake>=1.0.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.version]
path = "healthcheck/__init__.py"
pattern = "VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.sdist]
include = ["/healthcheck", "/tests", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["healthcheck"]

[tool.pytest.ini_options]
addopts = "-vv --cov=healthcheck --cov-config=.coveragerc"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["healthcheck", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "PT",
    "BLE",
]

[tool.ruff.lint.isort]
known-first-party = ["healthcheck"]

[tool.ruff.lint.per-file-ignores]
"healthcheck/__main__.py" = ["E402"]
